--- a/aspnet-get-started/Views/Home/Index.cshtml
+++ b/aspnet-get-started/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>This is developed by Maria, Adrian, Bipeen & Alex from CTRLS </h1>
-    <p class="lead">Welcome Team --- Good Morning DAN</p>
+    <h1>This is developed by Maria, Adrian, Bipeen & Alex </h1>
+    <p class="lead">We are learning some cool Azure stuff</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
